k8s/uat/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-application
  namespace: uat
  labels:
    app: bank-application
    name: bank-application
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: bank-application
    name: bank-application
